--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <div id="result">読み取り結果：<span id="codeText">未検出</span></div>
     <button id="startBtn">カメラ起動</button>
 
+    <h1>楽譜データベース</h1>
+<ul id="scoreList"></ul>
+
+<!-- 詳細表示モーダル -->
+<div id="detailModal" class="modal hidden">
+  <div class="modal-content" id="detailContent"></div>
+  <button id="closeBtn">閉じる</button>
+</div>
+
+
     <script src="script.js"></script>
 
     <!-- サービスワーカー登録 -->
