--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRコードチェックアプリ</title>
+    <title>HHWODataBase</title>
 
     <!-- PWAマニフェスト -->
     <link rel="manifest" href="manifest.json">
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
-    <h1>QRコードチェック</h1>
+    <h1>HHWODataBase</h1>
 
     <div id="reader"></div>
     <div id="result">読み取り結果：<span id="codeText">未検出</span></div>
