--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <div id="result">読み取り結果：<span id="codeText">未検出</span></div>
     <button id="startBtn">カメラ起動</button>
 
+    <div id="topBar">
+  <input type="text" id="searchInput" placeholder="検索...">
+  <button id="filterBtn">フィルター</button>
+</div>
+
 <div id="mainContent">
   <h1 id="pageTitle">楽譜データベース</h1>
   <ul id="scoreList"></ul>
