--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <h1 id="pageTitle">楽譜データベース</h1>
   <ul id="scoreList"></ul>
   <div id="placeholderMessage" class="hidden">表示問題なし</div>
+  <ul id="instrumentList" class="hidden"></ul>
+
 </div>
 
 <!-- 詳細モーダル -->
