--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
   <button id="btnRepair">修理記録</button>
 </div>
 
+    
+<!-- うまく使えない可能性大 -->
+<!-- 楽譜検索バー -->
+<div id="searchScoreArea">
+  <input type="text" id="searchScoreInput" placeholder="楽譜データベースを検索">
+  <button id="filterBtn">絞り込み</button>
+</div>
+
+<!-- 楽器検索バー（新規追加） -->
+<div id="searchInstrumentArea" class="hidden">
+  <input type="text" id="searchInstrumentInput" placeholder="楽器一覧を検索">
+  <button id="qrInstrumentBtn">📷</button>
+</div>
+
+
 
 
     <script src="script.js"></script>
