--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
     <h1>HHWODataBase</h1>
 
-    <div id="reader"></div>
-    <div id="result">読み取り結果：<span id="codeText">未検出</span></div>
-    <button id="startBtn">カメラ起動</button>
-
     <div id="topBar">
-  <input type="text" id="searchInput" placeholder="検索...">
-  <button id="filterBtn">フィルター</button>
+  <div id="searchArea">
+    <input type="text" id="searchInput" placeholder="検索">
+    <button id="filterBtn">絞り込み</button>
+　　 <button id="qrInstrumentBtn">📷</button>
+  </div>
 </div>
+
 
 <div id="mainContent">
   <h1 id="pageTitle">楽譜データベース</h1>
