--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- html5-qrcodeライブラリ -->
     <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
+    
 <body>
     <h1>HHWODataBase</h1>
 
@@ -25,6 +26,8 @@
 　　 <button id="qrInstrumentBtn">📷</button>
   </div>
 </div>
+
+    <div id="reader" style="width: 300px; height: 300px; display: none;"></div>
 
 
 <div id="mainContent">
@@ -62,8 +65,6 @@
   <div id="placeholderMessage" class="hidden">表示問題なし</div>
 
 </div>
-
-
 
 
     <script src="script.js"></script>
