--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   </div>
 </div>
 
-    <div id="reader" style="width: 300px; height: 300px; display: none;"></div>
+    
+    <div id="reader" style="width: 300px; height: 300px; display: none; position: relative;">
+  <button id="closeCameraBtn" style="position: absolute; top: 5px; right: 5px; z-index: 10;">✕</button>
+</div>
+
 
 
 <div id="mainContent">
