--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div id="searchArea">
     <input type="text" id="searchInput" placeholder="検索">
     <button id="filterBtn">絞り込み</button>
-      <button id="addScoreBtn">＋</button>
-　　 <button onclick="openAddScoreModal()">📷</button>
+      <button onclick="openAddScoreModal()">＋</button>
+　　 <button id="qrInstrumentBtn">📷</button>
   </div>
 </div>
 
