--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <form id="scoreForm">
     <div>
       <label>楽譜番号（自動）</label><br>
-      <input type="text" id="scoreNumber" name="scoreNumber" readonly>
+    　<input type="text" id="scoreNumber" name="scoreNumber" required />
     </div>
     <div>
       <label>曲名 *</label><br>
