--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 
 <!-- 楽譜追加モーダル -->
-<div id="addScoreModal" style="display:none; position:fixed; top:2%; left:10%; width:80%; background:white; padding:20px; border:1px solid #ccc; z-index:1000; overflow:scroll;">
+<div id="addScoreModal" class="modal hidden">
+ <div class="modal-content"></div>
   <h3>楽譜追加</h3>
   <form id="scoreForm">
     <div>
