--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <!-- 楽譜追加モーダル -->
 <div id="addScoreModal" class="modal hidden">
- <div class="modal-content"></div>
+ <div class="modal-content">
   <h3>楽譜追加</h3>
   <form id="scoreForm">
     <div>
@@ -137,6 +137,7 @@
     <button type="submit">登録</button>
     <button type="button" onclick="closeAddScoreModal()">閉じる</button>
   </form>
+     </div>
 </div>
 
 
