--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h3>楽譜追加</h3>
   <form id="scoreForm">
     <div>
-      <label>楽譜番号（自動）</label><br>
+      <label>楽譜番号</label><br>
     　<input type="text" id="scoreNumber" name="scoreNumber" required />
     </div>
     <div>
@@ -87,11 +87,11 @@
       <input type="text" name="artist">
     </div>
     <div>
-      <label>50音（ひらがな1文字） *</label><br>
+      <label>50音 *</label><br>
       <input type="text" name="kanaIndex" pattern="^[ぁ-ん]$" title="ひらがな1文字" required>
     </div>
     <div>
-      <label>アルファベット（A-Z1文字）</label><br>
+      <label>アルファベット</label><br>
       <input type="text" name="alphaIndex" pattern="^[A-Z]$" title="アルファベット大文字1文字">
     </div>
     <div>
@@ -133,11 +133,11 @@
       <label>備考</label><br>
       <input type="text" name="note">
     </div>
+　 </div>
     <br>
     <button type="submit">登録</button>
     <button type="button" onclick="closeAddScoreModal()">閉じる</button>
   </form>
-     </div>
 </div>
 
 
