--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <div id="searchArea">
     <input type="text" id="searchInput" placeholder="検索">
     <button id="filterBtn">絞り込み</button>
-      <button onclick="openAddScoreModal()">＋</button>
+      <button onclick="openAddScoreModal()">＋A</button>
+      <button onclick="openAddInstrumentModal()">＋B</button>
 　　 <button id="qrInstrumentBtn">📷</button>
   </div>
 </div>
