--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <img id="previewImg" style="max-width:100%; display:none;" />
 
     <br><button type="submit">登録</button>
-    <button type="button" id="closeInstrModal">閉じる</button>
+    <button type="button" onclick="closeAddInstrumentModal()">閉じる</button>
   </form>
 </div>
 
