--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
   <button id="btnRepair">修理記録</button>
 </div>
 
+<!-- なんだろうこれ。8/9追加 -->
+ <div id="repairDetailModal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <span class="close" onclick="closeRepairDetailModal()">&times;</span>
+    <div id="repairDetailContent" class="detail-content"></div>
+  </div>
+</div>
+
 
 <!-- 楽譜追加モーダル -->
 <div id="addScoreModal" style="
@@ -240,3 +248,4 @@
     </script>
 </body>
 </html>
+
