--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <ul id="scoreList"></ul>
   <div id="placeholderMessage" class="hidden">表示問題なし</div>
   <ul id="instrumentList" class="hidden"></ul>
+  <ul id="repairList" class="hidden"></ul>
 
 </div>
 
@@ -248,4 +249,5 @@
     </script>
 </body>
 </html>
+
 
