--- a/index.html
+++ b/index.html
@@ -58,31 +58,10 @@
   <button id="btnRepair">修理記録</button>
 </div>
 
-<!-- なんだろうこれ。8/9追加 -->
- <div id="repairDetailModal" class="modal" style="display:none;">
-  <div class="modal-content">
-    <span class="close" onclick="closeRepairDetailModal()">&times;</span>
-    <div id="repairDetailContent" class="detail-content"></div>
-  </div>
-</div>
 
 
 <!-- 楽譜追加モーダル -->
-<div id="addScoreModal" style="
-  display: none;
-  position: fixed;
-  top: 2%;
-  left: 10%;
-  width: 80%;
-  max-height: 90vh;
-  overflow-y: auto;
-  background: white;
-  padding: 20px;
-  border: 1px solid #ccc;
-  z-index: 1000;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-  border-radius: 8px;
-">
+<div class="addModal"　id="addScoreModal">
   <h3>楽譜追加</h3>
   <form id="scoreForm">
     <div>
@@ -228,6 +207,58 @@
   </form>
 </div>
 
+
+<!-- 楽器修理追加モーダル　8/12追加 -->
+<div class="addModal"　id="addRepairModal">
+  <h3>楽器修理追加</h3>
+  <form id="repairForm">
+    <div>
+      <label>楽器番号 *</label><br>
+    　<input type="text" name="instrumentNo" required>
+    </div>
+    <div>
+      <label>登録日 *</label><br>
+      <input type="date" id="startDate" name="repairDate" required />
+    </div>
+    <div>
+      <label>ステータス *</label><br>
+      <select name="status" required>
+        <option value="">選択してください</option>
+        <option>修理</option>
+        <option>点検</option>
+        <option>他校貸出</option>
+        <option>利用不可</option>
+        <option>処分予定・済</option>
+        <option>その他</option>
+      </select>
+    </div>
+    <div>
+      <label>点検・修理項目 *</label><br>
+      <select name="inspectionItems" required>
+        <option value="">選択してください</option>
+        <option>破損による修理</option>
+        <option>違和感による修理</option>
+        <option>原因不明の問題</option>
+        <option>その他修理</option>
+        <option>定期点検</option>
+        <option>楽器の不調</option>
+        <option>状態良好</option>
+        <option>楽器初期登録</option>
+        <option>その他</option>
+      </select>
+    </div>
+    <div>
+      <label>修理内容 *</label><br>
+      <input type="text" name="repairContent" required>
+    </div>
+    <div>
+    <br>
+    <button type="submit">登録</button>
+    <button type="button" onclick="closeAddRepaairModal()">閉じる</button>
+  </form>
+</div>
+    
+
 <!-- カメラ表示・撮影 -->
 <div id="cameraContainer" style="display:none;">
   <video id="video" autoplay playsinline style="width:100%; max-height:300px;"></video>
@@ -249,5 +280,6 @@
     </script>
 </body>
 </html>
+
 
 
