--- a/index.html
+++ b/index.html
@@ -61,7 +61,21 @@
 
 
 <!-- 楽譜追加モーダル -->
-<div class="addModal"　id="addScoreModal">
+<div id="addScoreModal" style="
+  display: none;
+  position: fixed;
+  top: 2%;
+  left: 10%;
+  width: 80%;
+  max-height: 90vh;
+  overflow-y: auto;
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 1000;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+  border-radius: 8px;
+">
   <h3>楽譜追加</h3>
   <form id="scoreForm">
     <div>
@@ -209,7 +223,21 @@
 
 
 <!-- 楽器修理追加モーダル　8/12追加 -->
-<div class="addModal"　id="addRepairModal">
+<div id="addRepairModal" style="
+  display: none;
+  position: fixed;
+  top: 2%;
+  left: 10%;
+  width: 80%;
+  max-height: 90vh;
+  overflow-y: auto;
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 1000;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+  border-radius: 8px;
+">
   <h3>楽器修理追加</h3>
   <form id="repairForm">
     <div>
@@ -280,6 +308,7 @@
     </script>
 </body>
 </html>
+
 
 
 
