--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <div id="topBar">
   <div id="searchArea">
     <input type="text" id="searchInput" placeholder="検索">
-    <button id="filterBtn">絞り込み</button>
+  <!-- 一旦いらない  <button id="filterBtn">絞り込み</button> -->
       <button onclick="openAddScoreModal()">＋A</button>
       <button onclick="openAddInstrumentModal()">＋B</button>
+      <button onclick="openAddRepairModal()">＋C</button>
 　　 <button id="qrInstrumentBtn">📷</button>
   </div>
 </div>
@@ -308,6 +309,7 @@
     </script>
 </body>
 </html>
+
 
 
 
