--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <div>
     <br>
     <button type="submit">登録</button>
-    <button type="button" onclick="closeAddRepaairModal()">閉じる</button>
+    <button type="button" onclick="closeAddRepairModal()">閉じる</button>
   </form>
 </div>
     
@@ -309,6 +309,7 @@
     </script>
 </body>
 </html>
+
 
 
 
