--- a/index.html
+++ b/index.html
@@ -302,6 +302,11 @@
         <option>その他</option>
       </select>
     </div>
+     <div>
+    <label>画像</label>
+    <button type="button" id="btnCaptureImage">写真を撮る</button>
+    <img id="previewImg" style="max-width:100%; display:none;" />
+       </div>
     <div>
       <label>修理内容 *</label><br>
       <input type="text" name="repairContent" required>
@@ -339,6 +344,7 @@
     </script>
 </body>
 </html>
+
 
 
 
