--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <button onclick="openAddScoreModal()">＋A</button>
       <button onclick="openAddInstrumentModal()">＋B</button>
       <button onclick="openAddRepairModal()">＋C</button>
+      <button onclick="openAddModal()">仮</button>
 　　 <button id="qrInstrumentBtn">📷</button>
   </div>
 </div>
@@ -348,6 +349,7 @@
     </script>
 </body>
 </html>
+
 
 
 
