--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
     <div>
       <label>登録日 *</label><br>
-      <input type="date" id="startDate" name="repairDate" required />
+      <input type="date" id="repairDate" name="startDate" required />
     </div>
     <div>
       <label>ステータス *</label><br>
@@ -357,6 +357,7 @@
     </script>
 </body>
 </html>
+
 
 
 
