--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
     <div>
       <label>登録日 *</label><br>
-      <input type="date" id="repairDate" name="startDate" required />
+      <input type="date" id="repairDate" name="repairDate" required />
     </div>
     <div>
       <label>ステータス *</label><br>
@@ -310,7 +310,7 @@
     </div>
       <div>
     <label>画像</label>
-    <button type="button" id="btnCaptureImage">写真を撮る</button>
+    <button type="button" id="btnCaptureImage2">写真を撮る</button>
     <img id="previewImg" style="max-width:100%; display:none;" />
        </div>
 <!-- カメラ表示・撮影8/12追加　-->
@@ -357,6 +357,7 @@
     </script>
 </body>
 </html>
+
 
 
 
