--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
       </div>
       <div>
     <label>画像</label>
-    <button type="button" onclick="opencamera()">写真を撮る</button>
+    <button type="button" onclick="openCamera()">写真を撮る</button>
     <img id="previewImg" style="max-width:100%; display:none;" />
        </div>
-<!-- カメラ表示・撮影8/12追加　-->
+<!-- カメラ表示・撮影8/12追加onclick="cameraContainer()"　-->
 <div id="cameraContainer" style="display:none;">
   <video id="video" autoplay playsinline style="width:100%; max-height:300px;"></video>
-  <button id="takePhotoBtn">📸 撮影</button>
-  <button id="closeCamera">カメラを閉じる</button>
+  <button onclick="takePhotoBtn()">📸 撮影</button>
+  <button onclick="closeCamera()">カメラを閉じる</button>
   <canvas id="canvas" style="display:none;"></canvas>
 </div>
     <br><button type="submit">登録</button>
@@ -310,14 +310,14 @@
     </div>
       <div>
     <label>画像</label>
-    <button type="button" onclick="opencamera()">写真を撮る</button>
+    <button type="button" onclick="openCamera()">写真を撮る</button>
     <img id="previewImg" style="max-width:100%; display:none;" />
        </div>
-<!-- カメラ表示・撮影8/12追加　-->
+<!-- カメラ表示・撮影8/12追加onclick="cameraContainer()"　-->
 <div id="cameraContainer" style="display:none;">
   <video id="video" autoplay playsinline style="width:100%; max-height:300px;"></video>
-  <button id="takePhotoBtn">📸 撮影</button>
-  <button id="closeCamera">カメラを閉じる</button>
+  <button onclick="takePhotoBtn()">📸 撮影</button>
+  <button onclick="closeCamera()">カメラを閉じる</button>
   <canvas id="canvas" style="display:none;"></canvas>
 </div>
     <div>
@@ -357,6 +357,7 @@
     </script>
 </body>
 </html>
+
 
 
 
