--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <img id="previewImg" style="max-width:100%; display:none;" />
        </div>
 <!-- カメラ表示・撮影8/12追加onclick="cameraContainer()"　-->
-<div onclick="cameraContainer()" style="display:none;">
+<div id="cameraContainer1" style="display:none;">
   <video id="video" autoplay playsinline style="width:100%; max-height:300px;"></video>
   <button onclick="takePhotoBtn()">📸 撮影</button>
   <button onclick="closeCamera()">カメラを閉じる</button>
@@ -314,7 +314,7 @@
     <img id="previewImg" style="max-width:100%; display:none;" />
        </div>
 <!-- カメラ表示・撮影8/12追加onclick="cameraContainer()"  id="cameraContainer"　-->
-<div onclick="cameraContainer()" style="display:none;">
+<div id="cameraContainer2" style="display:none;">
   <video id="video" autoplay playsinline style="width:100%; max-height:300px;"></video>
   <button onclick="takePhotoBtn()">📸 撮影</button>
   <button onclick="closeCamera()">カメラを閉じる</button>
@@ -351,6 +351,7 @@
     </script>
 </body>
 </html>
+
 
 
 
