--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!-- 楽器番号（3分割） -->
       <div>
     <label>分類 *</label>
-    <select id="part1" required>
+    <select id="part1" name="part1" required>
       <option value="">選択してください</option>
       <option value="1">1&nbsp;フルート・ピッコロ・ダブルリード</option>
       <option value="2">2&nbsp;クラリネット</option>
@@ -349,6 +349,7 @@
     </script>
 </body>
 </html>
+
 
 
 
