--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
 
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
     <!-- サービスワーカー登録 -->
     <script>
@@ -349,6 +350,7 @@
     </script>
 </body>
 </html>
+
 
 
 
